// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`project-management/tasks/atlassian-cloud CreateTask when all inputs are correct should create a task 1`] = `
Ok {
  "value": Object {
    "taskId": "10188",
    "url": "https://api.atlassian.com/ex/jira/0cfe1fef-1394-4fc0-862b-e636007ca0e0/rest/api/3/issue/10188",
  },
}
`;

exports[`project-management/tasks/atlassian-cloud DeleteTask when all inputs are correct should delete a task 1`] = `
Ok {
  "value": undefined,
}
`;

exports[`project-management/tasks/atlassian-cloud ListTasks when all inputs are correct should read all tasks for specified project 1`] = `
Ok {
  "value": Object {
    "nextPage": "4",
    "tasks": Array [
      Object {
        "assignee": undefined,
        "description": "Task description

",
        "parent": undefined,
        "projectIds": Array [
          "10000",
        ],
        "taskId": "10191",
        "title": "Test 3",
        "url": "https://api.atlassian.com/ex/jira/0cfe1fef-1394-4fc0-862b-e636007ca0e0/rest/api/3/issue/10191",
      },
      Object {
        "assignee": undefined,
        "description": "Task description

",
        "parent": undefined,
        "projectIds": Array [
          "10000",
        ],
        "taskId": "10190",
        "title": "Test 2",
        "url": "https://api.atlassian.com/ex/jira/0cfe1fef-1394-4fc0-862b-e636007ca0e0/rest/api/3/issue/10190",
      },
      Object {
        "assignee": undefined,
        "description": "Task description

",
        "parent": undefined,
        "projectIds": Array [
          "10000",
        ],
        "taskId": "10189",
        "title": "Test 1",
        "url": "https://api.atlassian.com/ex/jira/0cfe1fef-1394-4fc0-862b-e636007ca0e0/rest/api/3/issue/10189",
      },
      Object {
        "assignee": undefined,
        "description": "hello

1. w**o**rld


1. _w_**_ha_**_t_


![media](77b7e911-119a-411d-aece-7f59945b8f92)

* unordered


* list


__underlined__

~~strikethrough~~

\`code\`

\`\`\`
code block
\`\`\`

@Tomáš Mládek  mention



super[face](https://superface.ai)



> quote


---
",
        "parent": undefined,
        "projectIds": Array [
          "10000",
        ],
        "taskId": "10052",
        "title": "rich text",
        "url": "https://api.atlassian.com/ex/jira/0cfe1fef-1394-4fc0-862b-e636007ca0e0/rest/api/3/issue/10052",
      },
    ],
  },
}
`;

exports[`project-management/tasks/atlassian-cloud ReadTask when all inputs are correct should read task specified by id 1`] = `
Ok {
  "value": Object {
    "assignee": undefined,
    "description": "Task description

",
    "parent": undefined,
    "projectIds": Array [
      "10000",
    ],
    "taskId": "10192",
    "title": "Test",
    "url": "https://api.atlassian.com/ex/jira/0cfe1fef-1394-4fc0-862b-e636007ca0e0/rest/api/3/issue/10192",
  },
}
`;

exports[`project-management/tasks/atlassian-cloud UpdateTask when all inputs are correct should update a task 1`] = `
Ok {
  "value": Object {
    "taskId": "10193",
  },
}
`;
